--- a/public/css/ws.css
+++ b/public/css/ws.css
@@ -60,15 +60,6 @@
   background-color: #fdc25a;
 }
 
-.top .second-nav-box p {
-  padding: 0.5rem 0;
-  font-size: 1rem;
-  font-weight: 300;
-
-  text-decoration: none;
-  color: #000000;
-}
-
 .title-workshop {
   width: 300px;
   display: flex;
@@ -128,14 +119,30 @@
 .ws-1 .head-container {
   background-color: #eb3e37;
   padding: 3%;
+  position: relative;
+}
+.ws-1 .head-container h2{
+    color: #fff2d8;
+    width: 100%;
+    text-shadow: 3px 3px 0 #313153;
 }
 .ws-2 .head-container {
   background-color: #ffc34f;
   padding: 3%;
 }
+.ws-2 .head-container h2{
+    color: #fff2d8;
+    width: 100%;
+    text-shadow: 3px 3px 0 #eb3e37;
+}
 .ws-3 .head-container {
   background-color: #677156;
   padding: 3%;
+}
+.ws-3 .head-container h2{
+    color: #fff2d8;
+    width: 100%;
+    text-shadow: 3px 3px 0 #313153;
 }
 
 .ws-1 .img-container {
@@ -158,9 +165,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 
-  padding: 0 5%;
+  padding: 7% 5%;
 }
 
 .discription p {
@@ -169,8 +175,6 @@
 }
 
 .img-container .details {
-  width: 50%;
-
   display: flex;
   flex-direction: column;
 }
