--- a/public/css/top.css
+++ b/public/css/top.css
@@ -68,7 +68,7 @@
 .about-title p,
 .about-title h2 {
   color: white;
-  text-shadow: 0px 0px 9px #f7ed12;
+  text-shadow: 0px 0px 9px rgba(247, 237, 18, 0.5);
   margin: 0;
 }
 .about-title p {
