--- a/public/css/goods.css
+++ b/public/css/goods.css
@@ -97,7 +97,19 @@ a {
 }
 
 .goods h2 {
-  color: #ffffff;
+  position: relative;
+  color: #eb3e37;
+  font-size: 40px;
+}
+
+.goods h2::before {
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 100%;
+  color: #fff2d8;
+  font-size: 40px;
+  content: "GOODS";
 }
 
 .goods .contents {
@@ -128,15 +140,19 @@ a {
 }
 
 .area p span {
-  font-weight: bold;
+  font-family: "normalfont1";
 }
-
-.goods-container {
+.goods-container{
+  background-color: #f5f5f5;
+  border-radius: 12px;
+  border: 4px solid #FDC25A;
+}
+.area p{
+  margin-top: 5px;
+}
+.goods-container img{
   width: 100%;
   aspect-ratio: 1;
-
-  background-image: url("../image/goods/goods.png");
-  background-size: cover;
 }
 
 @media screen and (max-width: 768px) {
