--- a/public/css/stage.css
+++ b/public/css/stage.css
@@ -165,16 +165,29 @@ main{
 
   overflow: visible;
 }
-.cm .movie-container{
+.cm .area{
   width: 45%;
 }
-iframe{
+.cm .area .movie-container{
+  background-color: #000000;
   width: 100%;
   aspect-ratio: 16/9;
 }
 
+.cm .area p{
+  font-family: "normalfont1";
+  color: #ffffff;
+}
+.cm .area .movie-container p{
+  padding-top: 25%;
+}
+iframe{
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width:480px){
-.cm .movie-container{
+.cm .area{
     width: 100%;
 }
 }
