--- a/public/css/ws.css
+++ b/public/css/ws.css
@@ -69,7 +69,6 @@
   margin: 0 auto;
 }
 .title-workshop h2 {
-  font-size: 40px;
   color: #eb3e37;
   position: relative;
 }
@@ -78,7 +77,6 @@
   top: -3px;
   left: -3px;
   color: #fff2d8;
-  font-size: 40px;
   content: "WORKSHOP";
 }
 .title-workshop div {
@@ -114,9 +112,11 @@
 .ws-2,
 .ws-3 {
   margin-top: 10%;
+  width: 80%;
 }
 
 .ws-1 .head-container {
+  width: 100%;
   background-color: #eb3e37;
   padding: 3%;
   position: relative;
@@ -145,6 +145,15 @@
     text-shadow: 3px 3px 0 #313153;
 }
 
+.img-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding: 7% 5%;
+}
+
 .ws-1 .img-container {
   background-image: url("../image/event/ws/ws-1-bg.webp");
   background-size: cover;
@@ -161,12 +170,9 @@
   background-position: center;
 }
 
-.img-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 
-  padding: 7% 5%;
+.img-container p{
+  text-shadow: 0px 0px 4px #000000;
 }
 
 .discription p {
@@ -195,15 +201,20 @@
   .top {
     margin-top: 70px;
   }
+  h2 {
+    font-size: 30px;
+  }
+  .ws-1,
+.ws-2,
+.ws-3 {
+  margin-top: 10%;
+  width: 100%;
+}
 }
 
 @media screen and (max-width: 480px) {
   p {
     font-size: 16px;
-  }
-
-  h2 {
-    font-size: 23px;
   }
 
   .top .second-nav {
@@ -236,17 +247,41 @@
   }
 }
 
-.cm {
+.cm{
   background-color: #313153;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-flow: row wrap;
+  justify-content: space-between;
 
-  margin-top: 10%;
+  padding: 10%;
+  
+  gap: 30px;
 
   overflow: visible;
 }
-iframe {
+.cm .area{
+  width: 100%;
+}
+.cm .area .movie-container{
+  background-color: #000000;
   width: 100%;
   aspect-ratio: 16/9;
+}
+
+.cm .area p{
+  font-family: "normalfont1";
+  color: #ffffff;
+}
+.cm .area .movie-container p{
+  padding-top: 25%;
+}
+iframe{
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+.cm{
+  padding: 10% 0;
+}
 }
