add-cm-button-bg

--- a/public/css/top.css
+++ b/public/css/top.css
@@ -215,7 +215,7 @@ text-decoration: none;
 }
 
 .index-cm{
-  background-color: #888;
+  background-image: url("../image/index/cm_button_bg.webp");
   background-size: cover;
   background-position: left;
 }
