topのbuttoon_bg追加、タイテ追加

--- a/public/css/top.css
+++ b/public/css/top.css
@@ -221,7 +221,7 @@ text-decoration: none;
 }
 
 .index-goods{
-  background-color: #888;
+  background-image: url("../image/index/goods_button_bg.webp");
   background-size: cover;
   background-position: left;
 }
